tests/specs/ecosystem/std/archive/0_212_0.test
std/archive/0.212.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/io@^0.212.0": "jsr:@std/io@0.212.0"
    },
    "jsr": {
      "@std/io@0.212.0": {
        "integrity": "148ae752c11f991a51ee313d1e806a2f3a6e7faac17eceea2a871f65fc9c9b63"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMetaWithLinkName, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                            ~~~~~~
    at file://<tmpdir>/untar.ts:16:93

error: Type checking failed.

